--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison.Rmd
@@ -112,22 +112,22 @@ source(directory_and_filename_function_file)
 
 ```
 
-##Data to analysis
+## Data to analysis
 
 ```{R loading data}
-#Loading matrix and metadata
+# Loading matrix and metadata
 
 directory_and_filename_input_matrix <- paste(directory_input_matrix_sampleID,"/",filename_matrix,sep="")
 directory_and_filename_sampleID <- paste(directory_input_matrix_sampleID,"/",filename_sampleID,sep="")
 
-  # read datamatrix
+# read datamatrix
 if (decimal_separator=="dot"){
   datamatrix <- read.csv(directory_and_filename_input_matrix, header=T, dec = ".", row.names=1, check.names = FALSE, na.strings=c("", "NA", "Inf"), sep="\t")
 } else {
 datamatrix <- read.csv(directory_and_filename_input_matrix, header=T, dec = ",", row.names=1, check.names = FALSE, na.strings=c("", "NA", "Inf"), sep="\t")  
 }
 
-  #Read meta data with sample and peptide information for annotation####
+# Read meta data with sample and peptide information for annotation####
 if (decimal_separator=="dot"){
   sampleID <- read.table(directory_and_filename_sampleID,header=T, dec = ".", row.names=1, check.names = FALSE, na.strings=c("", "NA", "Inf"), sep="\t")
 } else {
@@ -179,7 +179,7 @@ variable selection method: `r if(variable_selection_using_VIP=="yes") {paste("Us
 
 ```{R subset sampleID and matrix, error=FALSE}
 
-## subset sampleID and matrix
+# subset sampleID and matrix
 
  subsetdatamatrix <- subsetmatrixfunction(sampleID,datamatrix,group1,group2,secID)
  subsetsampleID <- subsetsampleIDfunction(sampleID,group1,group2,secID)
@@ -230,14 +230,14 @@ pcorr <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(
 }
 
 ```
-##PCA 
-###all subjects included in comparison
+## PCA 
+### All subjects included in comparison
 ```{R PCA}
 
 plot(opls(subsetdatamatrix,typeVc = "x-score",info.txtC="none", fig.pdfC="none"), parAsColFcVn = classordered)
 ```
 
-###Subjects in `r group1`
+### Subjects in `r group1`
 
 ```{R PCA group1}
 subsetdatamatrix_group1 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group1)
@@ -245,7 +245,7 @@ if (nrow(subsetdatamatrix_group1<7)) {set_crossvalI <- nrow(subsetdatamatrix_gro
 opls(subsetdatamatrix_group1,typeVc = "x-score",info.txtC="none", crossvalI=set_crossvalI)
 ```
 
-###Subjects in `r group2`
+### Subjects in `r group2`
 
 ```{R PCA group2}
 subsetdatamatrix_group2 <- subset(subsetdatamatrix, subsetsampleID[,paste(colname_groupID)]==group2)
@@ -254,9 +254,9 @@ opls(subsetdatamatrix_group2,typeVc = "x-score",info.txtC="none", crossvalI=set_
 
 ```
 
-#Model 1. Models with userset p(corr) cutoff during variable selection and userset number of orthogonal variables pre and post variable selection
+# Model 1. Models with userset p(corr) cutoff during variable selection and userset number of orthogonal variables pre and post variable selection
 
-###Model descripton
+### Model descripton
 Model post variable selection using p(corr) cutoff `r paste(pcorr); if(pcorr_Model1=="according to p-value"){paste(" which correspond to p-value ", p_pearson_of_pcorr_cutoff)}` and has `r ortho_pre_vs_Model1` orthogonals in model pre variable selection and `r ortho_post_vs_Model1` orthogonals in model post variable selection
 
 
@@ -283,7 +283,7 @@ result_Model1 <-
 }
 
 ```
-###Model pre variable selection
+### Model pre variable selection
 
 ```{R plot model pre vs model1}
 result_pre_vs <- result_Model1$beforevsdata.oplsda@summaryDF
@@ -293,7 +293,7 @@ kable(result_pre_vs, row.names = T) %>%
 
 ```
 
-###Model statistics
+### Model statistics
 
 ```{R plot result model1}
   
@@ -308,7 +308,7 @@ if (ortho_post_vs>0) {
      
 ```
 
-###Score plots
+### Score plots
 
 ```{R polt score model1}
 
@@ -323,7 +323,7 @@ plotboxplot(result_Model1)
 
 ```
 
-###Loading plots
+### Loading plots
 
 ```{R plot loading model1}
 
@@ -339,7 +339,7 @@ if (length(result_Model1$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ```
 
-###Permutation after variable selection
+### Permutation after variable selection
 
 ```{R plot perm post vs model1}
 
@@ -347,10 +347,10 @@ plot(result_Model1$aftervsdata.oplsda, typeVc= c("permutation"))
 
 ```
 
-###Permutation before variable selection
+### Permutation before variable selection
 Subjects were permutated and variable selection performed using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`,  with `r ortho_pre_vs_Model1` orthogonal variables in model pre varibale selection and `r ortho_post_vs_Model1` orthogonal variables in model post variable selection
 
-####Table of permutation
+#### Table of permutation
 
 ```{R permutation pre vs of model1}
 
@@ -383,7 +383,7 @@ kable(permutated_models_Model1) %>%
 ```
 
  
-####Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
+#### Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
 
 ```{R}
 
@@ -411,7 +411,7 @@ kable(percentage_and_pvalue_perm_Model1, row.names = T) %>%
 
 ```
 
-####Plot of permutations before variable selection
+#### Plot of permutations before variable selection
 
 ```{R  plot permutation pre vs Model1, fig.height = 10}
 
@@ -421,15 +421,15 @@ pcorr <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(
 
 ```
 
-#Model 2. Model with p(corr) cutoff corresponding to userset pvalue cutoff for correlation
+# Model 2. Model with p(corr) cutoff corresponding to userset pvalue cutoff for correlation
 
 Selecting model with variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`
 
-##Optimizing model
+## Optimizing model
 
-###Investigating amount of orthogonal variables in model pre variable selection
+### Investigating amount of orthogonal variables in model pre variable selection
 
-####Table of model pre variable selection with different amount of orthogonal variables in model pre variable selection
+#### Table of model pre variable selection with different amount of orthogonal variables in model pre variable selection
 
 ```{R table model pre vs}
 testvariablename <- "table_different_amount_of_ortho_pre_vs_Model2"
@@ -474,7 +474,7 @@ plotof_model_pre_vs_with_different_amount_of_ortho_pre_vs(
 
 
 ```{R table post vs Model2}
-###  Table of model post variable selection with different amount of orthogonal variables in model pre variable selection
+### Table of model post variable selection with different amount of orthogonal variables in model pre variable selection
 
 testvariablename <- "table_model_post_vs_different_amount_of_ort_in_model_pre_vs_Model2"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -508,9 +508,9 @@ plotof_model_post_vs_with_different_amount_of_ortho_pre_vs(
 
 `r no_orto_original_with_max_Q2_and_diff_less_than_02$"ortho pre v.s."` orthogonal latent variables in model pre variable selection give model post variable selection with highest Q2 and lowest R2-Q2 in model post variable selection when 0 orthogonal variables are used in model post variable selection
 
-###Selecting amount of orthogonal variables in model pre variable selection and in model post variable selection
+### Selecting amount of orthogonal variables in model pre variable selection and in model post variable selection
 
-####  Table of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection 
+#### Table of model post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection 
 
 
 ```{R table of orthogonals model post vs Model2}
@@ -566,9 +566,9 @@ ortho_post_vs_Model2 <- ortho_post_vs
 ```
 
 
-##Best performing model using p(corr) cutoff corresponding to userset pvalue cutoff for correlation
-###Model description
-####Best performing model performing variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff` has `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection before variable selection
+## Best performing model using p(corr) cutoff corresponding to userset pvalue cutoff for correlation
+### Model description
+#### Best performing model performing variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff` has `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection before variable selection
 
 ```{R Best performing model2}
 
@@ -590,7 +590,7 @@ result_Model2 <-
 }
 
 ```
-###Model pre variable selection
+### Model pre variable selection
 
 ```{R plot model pre vs model2}
 result_pre_vs <- result_Model2$beforevsdata.oplsda@summaryDF
@@ -602,7 +602,7 @@ plot(result_Model2$beforevsdata.oplsda , typeVc= c("overview"))
 
 ```
 
-###Model statistics
+### Model statistics
 
 ```{R plot summary model2}
 
@@ -616,7 +616,7 @@ plot(result_Model2$aftervsdata.oplsda, typeVc= c("outlier"))
      
 ```
 
-###Score plots
+### Score plots
 
 ```{R plot score model2}
 
@@ -630,7 +630,7 @@ plotboxplot(result_Model2)
 
 ```
 
-###Loading plots
+### Loading plots
 
 ```{R plot loading model2}
 
@@ -648,7 +648,7 @@ if (length(result_Model2$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ```
 
-###Permutation after variable selection
+### Permutation after variable selection
 
 ```{R plot perm post vs model2}
 
@@ -656,10 +656,10 @@ plot(result_Model2$aftervsdata.oplsda, typeVc= c("permutation"))
 
 ```
 
-###Permutation before variable selection
+### Permutation before variable selection
 Subjects were permutated and variable selection performed using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`,  with `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-####Table of permutation
+#### Table of permutation
 
 ```{R permutation pre vs Model2}
 
@@ -692,7 +692,7 @@ kable(permutated_models_Model2) %>%
 ```
 
  
-####Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
+#### Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
 
 ```{R}
 
@@ -717,7 +717,7 @@ kable(percentage_and_pvalue_perm_Model2, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F,position = "left")
 
 ```
-####Plot permutations of best performing model with variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`
+#### Plot permutations of best performing model with variable selection using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`
 
 ```{R  plot permutation pre vs model2, fig.height = 10}
 
@@ -726,15 +726,15 @@ plotpermutationswithoriginalmodelandreg(permutated_models_Model2, subsetdatamatr
 ```
 
 
-#Model 3. Model with variable using p(corr) cutoff giving best performing model and less than userset p-value cutoff for pearson correlation 
+# Model 3. Model with variable using p(corr) cutoff giving best performing model and less than userset p-value cutoff for pearson correlation 
 
 Selecting model with variable selection using p(corr) which gives model with high Q2, low difference between R2 and Q2, low p-value for Q2 and corresponding to p-value for pearson correlation less than `r p_pearson_of_pcorr_cutoff`
 
-##Model optimization
+## Model optimization
 
-###P(corr) table, investigating different p(corr) cutoff
+### P(corr) table, investigating different p(corr) cutoff
 
-####Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection.
+#### Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection.
 
 ```{R table using different pcorr cutoff}
 pcorr_corresponging_to_pvalue <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(subsetsampleID))
@@ -780,9 +780,9 @@ plot_pcorrtable_amount_of_variables_with_pcorr_labels(
 
 ```
 
-###Selecting number of orthogonal variables in model pre variable selection and in model post variable selection
+### Selecting number of orthogonal variables in model pre variable selection and in model post variable selection
 
-####  Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff`
+#### Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff`
 
 
 ```{R table of orthogonals model3}
@@ -829,9 +829,9 @@ plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
 
 `r ortho_pre_vs` orthogonal latent variables in model pre variable selection and `r ortho_post_vs` in model post variable selection give model post variable selection with highest Q2 and lowest R2-Q2.
 
-##Best performing model using p(corr) cutoff giving highest Q2
-###Model description
-####Best performing model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection resulted in `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
+## Best performing model using p(corr) cutoff giving highest Q2
+### Model description
+#### Best performing model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection resulted in `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
 ```{R Best performing model3, fig.fullwidth=TRUE}
 
@@ -854,7 +854,7 @@ result_Model3 <-
 }
 
 ```
-###Model pre variable selection
+### Model pre variable selection
 
 ```{R plot summary model pre vs model3}
 result_pre_vs <- result_Model3$beforevsdata.oplsda@summaryDF
@@ -867,7 +867,7 @@ plot(result_Model3$beforevsdata.oplsda , typeVc= c("overview"))
 
 ```
 
-###Model statistics
+### Model statistics
 
 ```{R plot summary model3}
 
@@ -881,7 +881,7 @@ plot(result_Model3$aftervsdata.oplsda, typeVc= c("outlier"))
      
 ```
 
-###Score plots
+### Score plots
 
 ```{R plot score model3}
 
@@ -895,7 +895,7 @@ plotboxplot(result_Model3)
 
 ```
 
-###Loading plots
+### Loading plots
 
 ```{R plot loading model3}
 
@@ -911,7 +911,7 @@ if (length(result_Model3$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ```
 
-###Permutation after variable selection
+### Permutation after variable selection
 
 ```{R plot perm post vs model3}
 
@@ -920,10 +920,10 @@ plot(result_Model3$aftervsdata.oplsda, typeVc= c("permutation"))
 ```
 
 
-###Permutation before variable selection
+### Permutation before variable selection
 Subjects were permutated and variable selection performed using p(corr) cutoff `r pcorr` with highest Q2 after variable selection and using `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-####Table of permutations
+#### Table of permutations
 
 ```{R permutation pre vs model3}
 
@@ -956,7 +956,7 @@ kable(permutated_models_Model3) %>%
 ```
 
  
-####Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
+#### Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
 
 ```{R}
 
@@ -982,7 +982,7 @@ kable(percentage_and_pvalue_perm_Model3, row.names = T) %>%
 
 
 ```
-####Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
+#### Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
 ```{R plot permutation pre vs model3, fig.height = 10}
 
@@ -990,13 +990,13 @@ plotpermutationswithoriginalmodelandreg(permutated_models_Model3, subsetdatamatr
 
 ```
 
-#Model 4. Model with p(corr) cutoff giving best performing model and corresponding to p-value for pearson correlation less than userset value and using minimal amount of variables
+# Model 4. Model with p(corr) cutoff giving best performing model and corresponding to p-value for pearson correlation less than userset value and using minimal amount of variables
 
 Model with variable selection using p(corr) corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` which gives model with high Q2, low difference between R2 and Q2, low pQ2 post variable selection and using minimal amount of variables
 
-##Optimizing model
+## Optimizing model
 
-###P(corr) table, investigating different p(corr) cutoff using minimal amount of variables
+### P(corr) table, investigating different p(corr) cutoff using minimal amount of variables
 
 ```{R}
 ortho_pre_vs <- ortho_pre_vs_Model2
@@ -1004,7 +1004,7 @@ ortho_post_vs <- ortho_post_vs_Model2
 
 ```
 
-####Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection, `r ortho_post_vs` orthogonal in model post variable selection and using minimal amount of variables.
+#### Table of models after variable selection using different p(corr) cutoff and using `r ortho_pre_vs` orthogonal in model pre variable selection, `r ortho_post_vs` orthogonal in model post variable selection and using minimal amount of variables.
 
 ```{R pcorr table model4}
 pcorr_corresponging_to_pvalue <- calculatepcorrfrompvalue(selectpvalue=p_pearson_of_pcorr_cutoff,n=nrow(subsetsampleID))
@@ -1033,9 +1033,9 @@ plot_pcorrtable_amount_of_variables_with_pcorr_labels(
 
 ```
 
-###Selecting amount of orthogonal variables in model pre variable selection and in model post variable selection
+### Selecting amount of orthogonal variables in model pre variable selection and in model post variable selection
 
-####  Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` using minimal amount of variables
+#### Table of models post variable selection with different amount of orthogonal variables in model pre variable selection and in model post variable selection using p(corr)=`r pcorr` giving highest Q2, lowest diff between R2 and Q2 and corresponding to p-value less than `r p_pearson_of_pcorr_cutoff` using minimal amount of variables
 
 
 ```{R table of orthogonals Model 4}
@@ -1083,9 +1083,9 @@ plotof_model_post_vs_table_with_different_amount_of_ortho_pre_and_post_vs(
 
 `r ortho_pre_vs` orthogonal latent variables in model pre variable selection and `r ortho_post_vs` in model post variable selection give model post variable selection with highest Q2 and lowest R2-Q2.
 
-##Best performing model using p(corr) cutoff giving highest Q2 using minimal amount of variables
-###Model description
-####Best performing model with variable selection using p(corr) cutoff `r pcorr` with highest Q2  using minimal amount of variables after variable selection resulted in `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
+## Best performing model using p(corr) cutoff giving highest Q2 using minimal amount of variables
+### Model description
+#### Best performing model with variable selection using p(corr) cutoff `r pcorr` with highest Q2  using minimal amount of variables after variable selection resulted in `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
 ```{R Best performing Model 4, fig.fullwidth=TRUE}
 
@@ -1108,7 +1108,7 @@ result_Model4 <-
 }
 
 ```
-###Model pre variable selection
+### Model pre variable selection
 
 ```{R plot summary model pre vs model4}
 result_pre_vs <- result_Model4$beforevsdata.oplsda@summaryDF
@@ -1121,7 +1121,7 @@ plot(result_Model4$beforevsdata.oplsda , typeVc= c("overview"))
 
 ```
 
-###Model statistics
+### Model statistics
 
 ```{R plot summary model4}
 
@@ -1135,7 +1135,7 @@ plot(result_Model4$aftervsdata.oplsda, typeVc= c("outlier"))
      
 ```
 
-###Score plots
+### Score plots
 
 ```{R plot score model 4}
 
@@ -1149,7 +1149,7 @@ plotboxplot(result_Model4)
 
 ```
 
-###Loading plots
+### Loading plots
 
 ```{R plot loading model4}
 
@@ -1165,7 +1165,7 @@ if (length(result_Model4$pcorrlistaftervs$pcorrlistaftervs)>=50) {
 
 ```
 
-###Permutation after variable selection
+### Permutation after variable selection
 
 ```{R plot perm post vs model4}
 
@@ -1174,10 +1174,10 @@ plot(result_Model4$aftervsdata.oplsda, typeVc= c("permutation"))
 ```
 
 
-###Permutation before variable selection
+### Permutation before variable selection
 Subjects were permutated and variable selection performed using p(corr) cutoff `r pcorr` with highest Q2 after variable selection using minimal amount of variables and using `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
-####Table of permutations
+#### Table of permutations
 
 ```{R permutation pre vs of Model 4}
 
@@ -1212,7 +1212,7 @@ kable(permutated_models_Model4) %>%
 ```
 
  
-####Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
+#### Percentage of R2 and Q2 in permutated model larger than R2 and Q2 in unpermutated model
 
 ```{R}
 
@@ -1238,7 +1238,7 @@ kable(percentage_and_pvalue_perm_Model4, row.names = T) %>%
 
 
 ```
-####Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection  using minimal amount of variables and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
+#### Plot permutations of model with variable selection using p(corr) cutoff `r pcorr` with highest Q2 after variable selection  using minimal amount of variables and `r ortho_pre_vs` orthogonal in model pre variable selection and `r ortho_post_vs` orthogonal in model post variable selection
 
 ```{R plot permutation pre vs model4, fig.height = 10}
 
@@ -1246,8 +1246,8 @@ plotpermutationswithoriginalmodelandreg(permutated_models_Model4, subsetdatamatr
 
 ```
 
-#Iteration table
-##Create iteration table continuously increasing p(corr) during variable selection and adding orthogonals only if it increases Q2 1% in the model (i.e. not concidering the total amount of orthogonals pre and post)
+# Iteration table
+## Create iteration table continuously increasing p(corr) during variable selection and adding orthogonals only if it increases Q2 1% in the model (i.e. not concidering the total amount of orthogonals pre and post)
 
 ```{R iteration table}
 testvariablename <- "iterationtable"
@@ -1279,7 +1279,7 @@ best_performing_iteration_model_few_variables <-
 
 
 ```
-##Best performing iteration model
+## Best performing iteration model
 
 ```{R}
 
